--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": "Elnqyb live stream",
+    "name": "VCPlayerBot",
     "description": "Telegram bot to stream video in telegram VC",
-    "Developmer": "https://t.me/ahmedelnqyb",
+    "repository": "https://github.com/subinps/VCPlayerBot",
     "stack": "container",
     "keywords": [
       "telegram",
