--- a/app.json
+++ b/app.json
@@ -1,5 +1,7 @@
 {
+    "name": "elnqyb live stream",
     "description": "Telegram bot to stream video in telegram VC",
+    "repository": "https://t.me/ahmedelnqyb ",
     "stack": "container",
     "keywords": [
       "telegram",
